// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a ButtonText control to the left 1`] = `
<ButtonText
  backgroundColor="blue"
  borderColor="green"
  borderWidth="none"
  className="test-class"
  color="white"
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  iconName="bomb"
  id=""
  imageFile=""
  justify={0}
  location="none"
  noedit={false}
  nohover={false}
  noicon={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  text="test text"
  visible={true}
>
  <div
    className="ui-button-text buttonText ripple normal test-class"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "blue",
        "borderColor": "green",
        "color": "white",
      }
    }
  >
    <div
      className="content normal left"
    >
      test text
    </div>
    <Icon
      backgroundColor="inherit"
      borderColor="inherit"
      borderWidth="none"
      className="icon"
      color="inherit"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      iconName="bomb"
      id=""
      imageFile=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      sizing="normal"
      style={Object {}}
      visible={true}
    >
      <i
        className="ui-icon icon none fa fa-bomb normal icon"
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "inherit",
          }
        }
      />
    </Icon>
  </div>
</ButtonText>
`;

exports[`Test disabling of a ButtonText control 1`] = `
<ButtonText
  backgroundColor="inherit"
  borderColor="inherit"
  borderWidth="none"
  className=""
  color="inherit"
  contentEditable={false}
  direction="right"
  disabled={true}
  focus={false}
  iconName="bomb"
  id=""
  imageFile=""
  justify={1}
  location="none"
  noedit={false}
  nohover={false}
  noicon={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  text=""
  visible={true}
>
  <div
    className="ui-button-text buttonText normal disabled nohover"
    onClick={[Function]}
    style={Object {}}
  >
    <Icon
      backgroundColor="inherit"
      borderColor="inherit"
      borderWidth="none"
      className="icon"
      color="inherit"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      iconName="bomb"
      id=""
      imageFile=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      sizing="normal"
      style={Object {}}
      visible={true}
    >
      <i
        className="ui-icon icon none fa fa-bomb normal icon"
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "inherit",
          }
        }
      />
    </Icon>
    <div
      className="content normal right"
    />
  </div>
</ButtonText>
`;

exports[`Test making a ButtonText control invisible 1`] = `
<ButtonText
  backgroundColor="inherit"
  borderColor="inherit"
  borderWidth="none"
  className=""
  color="inherit"
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  iconName="bomb"
  id=""
  imageFile=""
  justify={1}
  location="none"
  noedit={false}
  nohover={false}
  noicon={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  text=""
  visible={false}
>
  <div
    className="ui-button-text buttonText ripple normal invisible"
    onClick={[Function]}
    style={Object {}}
  >
    <Icon
      backgroundColor="inherit"
      borderColor="inherit"
      borderWidth="none"
      className="icon"
      color="inherit"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      iconName="bomb"
      id=""
      imageFile=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      sizing="normal"
      style={Object {}}
      visible={true}
    >
      <i
        className="ui-icon icon none fa fa-bomb normal icon"
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "inherit",
          }
        }
      />
    </Icon>
    <div
      className="content normal right"
    />
  </div>
</ButtonText>
`;

exports[`Test retrieval of ButtonText props object 1`] = `
Object {
  "backgroundColor": "inherit",
  "borderColor": "inherit",
  "borderWidth": "none",
  "className": "",
  "color": "inherit",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "iconName": "bomb",
  "id": "",
  "imageFile": "",
  "justify": 1,
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noicon": false,
  "noripple": false,
  "onClick": [Function],
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "text": "",
  "visible": true,
}
`;
